--- a/works.html
+++ b/works.html
@@ -57,10 +57,10 @@
 		padding-right:10px;
 		padding-left:10px;
 		padding-top:10px;
-		padding-bottom:230px;
+		padding-bottom:255px;
 		background-color:LightCyan;
 	}
-	h3{
+	h3 p{
 		white-space:nowrap;
 		overflow:hidden;
 		text-overflow:ellipsis;
@@ -70,16 +70,8 @@
 		font-size:14px;
 		color:#666;
 	}
-	li p{
-		line-height:25px;
-	}
-	li.movie span{
-		font-weight:bold;
+	span{
 		color:#FF5584;
-	}
-	li.hot span{
-		margin-right:10px;
-		color:red;
 	}
 </style>
 </head>
